#39 Revamped grid to use isotope for grid scaling. This fixed the issue with the books not showing correctly during scrolling.

--- a/CalibreLib/wwwroot/css/site.css
+++ b/CalibreLib/wwwroot/css/site.css
@@ -116,3 +116,10 @@ body {
         text-align: left;
         width: 100%;
     }
+
+.grid-item {
+    width: 200px;
+    height: 450px;
+    float: left;
+    margin: 10px;
+}
